Implemented MarkDownFile representation and refactored tests to check metadata of object, not file